<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:fitsSystemWindows="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/button_submit"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorBg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/pound_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:text="@string/pound"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="48sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/pound_logo"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="36dp"
                android:gravity="center"
                android:text="@string/instruction_token"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instruction"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>